# dappswarm

./: .gitignore  Cargo.toml  Makefile  README.md
demo/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts
demo/bundle/: dappnode_package.json  docker-compose.yml
demo/scripts/: build-bundle.sh  refresh-metadata.ts
demo/src/: app.css  app.html
demo/src/lib/: feedClient.ts  feedData.ts  feedStore.svelte.ts  keccak.ts  metadata.ts
demo/src/lib/components/: Architecture.svelte  Footer.svelte  Hero.svelte  LiveFeed.svelte  PublishFlow.svelte  ResolveFlow.svelte  SelfCertBadge.svelte  SocDeriver.svelte  Terminal.svelte  TryItYourself.svelte  WhyCards.svelte
demo/src/lib/viz/: ChunkStream.svelte  HexGrid.svelte  KeccakChain.svelte  MantarayTree.svelte
demo/src/routes/: +layout.svelte  +page.svelte
docs/: DEMO.md
fixtures/hello-dnp/: dappnode_package.json  docker-compose.yml  index.html
scripts/: fetch-real-dnp.sh
src/: bundle.rs  cli.rs  feed.rs  install.rs  lib.rs  main.rs  publish.rs  resolve.rs  soc.rs  swarm.rs
tests/: bzz_roundtrip.rs
