[package]
name = "dappswarm"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dappswarm"
path = "src/main.rs"

[dependencies]
ant-crypto = { path = "../ant/crates/ant-crypto" }
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
tar = "0.4"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread"
] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow conventions that would fight the codebase rather than help it.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Byte-array and span math is clearer with explicit casts.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
